deployment/kubernetes/namespace_config_secret_dev.yml
# 1. create namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dlw-dev
  labels:
    environment: development
  resourceVersion : "6"
