deployment/kubernetes/deployment_dev.yaml
# 1. create namespace
# apiVersion: v1
# kind: Namespace
# metadata:
#     name: dlw-dev
#     labels:
#         environment: development
#     #resourceVersion : "4"
    
---
# 4.1 create deployment with pod spec for date-api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlw-deployment-dev-date
  namespace: dlw-dev
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: date-api
  template:
    metadata:
      labels:
        app: date-api
    spec:
      containers:
      - name: date-api
        image: date-api:1.0.0
        ports:
        - containerPort: 8383
        resources:
          requests:
            memory: 256Mi
            cpu: "128m"
          limits:
            memory: 512Mi
            cpu: "256m"
        volumeMounts:
          - mountPath: /var/run/secrets/tokens
            name: vault-token
      serviceAccountName: dlw-sericeaccount
      volumes:
      - name: vault-token
        projected:
          sources:
          - serviceAccountToken:
              path: vault-token
              expirationSeconds: 7200
              audience: vault            

---
# 4.2 create deployment with pod spec for memo-api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlw-deployment-dev-memo
  namespace: dlw-dev
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: memo-api
  template:
    metadata:
      labels:
        app: memo-api
    spec:
      containers:
      - name: memo-api
        image: memo-api:1.0.0
        ports:
        - containerPort: 8282
        resources:
          requests:
            memory: 256Mi
            cpu: "128m"
          limits:
            memory: 512Mi
            cpu: "256m"
        volumeMounts:
          - mountPath: /var/run/secrets/tokens
            name: vault-token
      serviceAccountName: dlw-sericeaccount
      volumes:
      - name: vault-token
        projected:
          sources:
          - serviceAccountToken:
              path: vault-token
              expirationSeconds: 7200
              audience: vault         

---
# 4.3 create deployment with pod spec for user-api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlw-deployment-dev-user
  namespace: dlw-dev
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: user-api:1.0.0
        ports:
        - containerPort: 8181
        resources:
          requests:
            memory: 256Mi
            cpu: "128m"
          limits:
            memory: 512Mi
            cpu: "256m"
        volumeMounts:
          - mountPath: /var/run/secrets/tokens
            name: vault-token
      serviceAccountName: dlw-sericeaccount
      volumes:
      - name: vault-token
        projected:
          sources:
          - serviceAccountToken:
              path: vault-token
              expirationSeconds: 7200
              audience: vault    

---
# 4.4 create deployment with pod spec for finance-api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlw-deployment-dev-finance
  namespace: dlw-dev
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: finance-api
  template:
    metadata:
      labels:
        app: finance-api
    spec:
      containers:
      - name: finance-api
        image: finance-api:1.0.0
        ports:
        - containerPort: 8484
        resources:
          requests:
            memory: 256Mi
            cpu: "128m"
          limits:
            memory: 512Mi
            cpu: "256m"
        volumeMounts:
          - mountPath: /var/run/secrets/tokens
            name: vault-token
      serviceAccountName: dlw-sericeaccount
      volumes:
      - name: vault-token
        projected:
          sources:
          - serviceAccountToken:
              path: vault-token
              expirationSeconds: 7200
              audience: vault                 

---
# 5.1 create service for with NodePort exposed
apiVersion: v1
kind: Service
metadata:
  name: dlw-service-date
  namespace: dlw-dev
spec:
  type: NodePort #default is ClusterIP which is only accessible inside kubernetes
  selector:
    app: date-api
  ports:
    - name: http
      protocol: TCP
      port: 8383
      targetPort: 8383 # can use port name reference or port number, container name is more flexible as we can change port number
      nodePort: 30080 #default range from: 30000 - 32767
---
# 5.2 create service for with NodePort exposed
apiVersion: v1
kind: Service
metadata:
  name: dlw-service-memo
  namespace: dlw-dev
spec:
  type: ClusterIP #default is ClusterIP which is only accessible inside kubernetes
  selector:
    app: memo-api
  ports:
    - name: http
      protocol: TCP
      port: 8282
      targetPort: 8282 # can use port name reference or port number, container name is more flexible as we can change port number
      
---
# 5.3 create service for with NodePort exposed
apiVersion: v1
kind: Service
metadata:
  name: dlw-service-user
  namespace: dlw-dev
spec:
  type: ClusterIP #default is ClusterIP which is only accessible inside kubernetes
  selector:
    app: user-api
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8181 # can use port name reference or port number, container name is more flexible as we can change port number

---
# 5.4 create service for with NodePort exposed
apiVersion: v1
kind: Service
metadata:
  name: dlw-service-finance
  namespace: dlw-dev
spec:
  type: ClusterIP #default is ClusterIP which is only accessible inside kubernetes
  selector:
    app: finance-api
  ports:
    - name: http
      protocol: TCP
      port: 8484
      targetPort: 8484 # can use port name reference or port number, container name is more flexible as we can change port number
